--- a/requirements.txt
+++ b/requirements.txt
@@ -98,7 +98,7 @@ nest-asyncio==1.5.6
 notebook==6.5.4
 notebook_shim==0.2.2
 numexpr==2.8.4
-numpy==1.25.2
+numpy
 openai==0.28.0
 openapi-schema-pydantic==1.2.4
 openpyxl==3.0.9
